spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvn-app
  labels:
    app: mvn-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mvn-app
  template:
    metadata:
      labels:
        app: mvn-app
    spec:
      containers:
      - name: mvn-app
        image: okeymcokoli/maven-app:20
        ports:
        - containerPort: 8080
